--- a/index.html
+++ b/index.html
@@ -12,21 +12,26 @@
         <div class="weather_today">
             <div class="place">
                 <div class="search">
-                    <input type="text" placeholder="Nhap ten thanh pho">
-                    <button type="submit"><span>Tìm kiếm</span></button>
+                    <input type="text" placeholder="Nhap ten thanh pho" id="searchInput">
+                    <button type="submit" onclick="searchPlace()"><span>Tìm kiếm</span></button>
                 </div>
                 <div class="infor_place">
-                    <h1>Ha Noi, Viet Nam</h1>
+                    <h1 id="result"></h1>
                 </div>
                 <div class="tempurature">
                     <span><img src="image/sun.png" alt=""></span>
                     <span class="tem_number">36</span>
-                </div>
+                </div>      
             </div>
-
         </div>
         <div class="weather_week">
-            
+            <div class="dayofweek"><img src="image/rain.png" alt=""><div class="line"></div></div>
+            <div class="dayofweek"><img src="image/sun.png" alt=""><div class="line"></div></div>
+            <div class="dayofweek"><img src="image/rain.png" alt=""><div class="line"></div></div>
+            <div class="dayofweek"><img src="image/sun.png" alt=""><div class="line"></div></div>
+            <div class="dayofweek"><img src="image/sun.png" alt=""><div class="line"></div></div>
+            <div class="dayofweek"><img src="image/sun.png" alt=""><div class="line"></div></div>
+            <div class="dayofweek"><img src="image/rain.png" alt=""><div class="line"></div></div>
         </div>
     </div>
     <script src="index.js"></script>
