--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div class="weather_today">
             <div class="place">
                 <div class="search">
-                    <input type="text" placeholder="Nhap ten thanh pho" id="searchInput">
-                    <button type="submit" onclick="searchPlace()"><span>Tìm kiếm</span></button>
+                    <input type="text" placeholder="Nhap ten thanh pho" class="searchInput">
+                    <button type="submit" class="btnsearch"><span>Tìm kiếm</span></button>
                 </div>
                 <div class="infor_place">
                     <h1 id="result"></h1>
                 </div>
                 <div class="tempurature">
-                    <span><img src="image/sun.png" alt=""></span>
-                    <span class="tem_number">30</span>
+                    <span><img class="image_weather" src="image/place.png" alt=""></span>
+                    <span ><h1 class="tem_number"></h1></span>
                 </div>      
             </div>
         </div>
