--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
                 <div class="tempurature">
                     <span><img class="image_weather" src="image/place.png" alt=""></span>
                     <span ><h1 class="tem_number"></h1></span>
-                    <span><h2 class="tem_feel"></h2></span>
+                    <div class="details">
+                        <span><h2 class="tem_feel"></h2></span>
+                        <span>
+                            <h2 class="tem_max"></h2>
+                        </span>
+                        <span>
+                            <h2 class="tem_min"></h2>
+                        </span>
+                    </div>
+                    
+                    
                 </div>      
             </div>
         </div>
