--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <div class="search">
                     <input type="text" placeholder="Nhap ten thanh pho" class="searchInput">
                     <button type="submit" class="btnsearch"><span>Tìm kiếm</span></button>
+                    <div class="time"></div>
                 </div>
                 <div class="infor_place">
                     <h1 id="result"></h1>
