--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="weather_week" id="tuna">
             
         <h1>Biểu đồ nhiệt độ của thành phố</h1>
-        <div class="chart-container" style="position: relative; height:400px; width:80vw;">
+        <div class="chart-container">
          <canvas id="temperatureChart"></canvas>
         </div>
                
